Mark menu group as tight in menu-content example

--- a/examples/juicy-tile-grid/menu-content.html
+++ b/examples/juicy-tile-grid/menu-content.html
@@ -150,6 +150,7 @@
                             "hidden": false,
                             "itemName": "Group 1",
                             "heightAuto": false,
+                            "tightGroup": true,
                             "items": [
                                 { "width": "100%", "height": 25, "priority": 0.5, "id": "0", "itemName": "Caption", "hidden": false },
                                 { "width": "100%", "height": 31, "priority": 0.3673469387755103, "id": "2", "itemName": "Menu", "hidden": false, "heightAuto": true },
