--- a/examples/juicy-tile-grid/label-input.html
+++ b/examples/juicy-tile-grid/label-input.html
@@ -30,9 +30,11 @@
             box-shadow: inset 0px 0px 10px 0px rgba(50, 50, 50, 0.6);
         }
 
+        .markdown-body{
+            margin: 2em 0 2em 250px;
+        }
         .markdown-body > juicy-tile-grid {
             padding: 1em;
-            margin: 2em 0 2em 200px;
         }
 
         juicy-tile-grid label {
@@ -87,38 +89,37 @@
             </template>
 
             <!--core-localstorage name="juicy-tiles-static-dynamic-input" value="{{setup}}"></core-localstorage>-->
-            <juicy-tiles-setup-sync storedvalue="{{setup}}"></juicy-tiles-setup-sync>
-            <juicy-tile-grid id="st1" setup="[[setup]]">
-                <div>
-                    <small>Static width (150px)</small>
-                </div>
-                <div>
-                    <small>Flexible width (100% - 160px)</small>
-                </div>
-                <div>
-                    <label>First name</label>
-                </div>
-                <div>
-                    <input type="text" />
-                </div>
-                <div>
-                    <label>Last name</label>
-                </div>
-                <div>
-                    <input type="text" />
-                </div>
+            <juicy-tiles-setup-sync storedvalue="{{json}}"></juicy-tiles-setup-sync>
+            <juicy-tile-grid id="grid" setup="[[json]]">
+                <small>Static width (150px)</small>
+                <small>Flexible width (100% - 160px)</small>
+                <label>First name</label>
+                <input type="text" />
+                <label>Last name</label>
+                <input type="text" />
             </juicy-tile-grid>
+
+            <h3>Code</h3>
+            <h4>HTML:</h4>
+            <pre><code>&lt;juicy-tile-grid id="grid" setup="[&#8203;[json]]"&gt;
+    &lt;small&gt;Static width (150px)&lt;/small&gt;
+    &lt;small&gt;Flexible width (100% - 160px)&lt;/small&gt;
+    &lt;label&gt;First name&lt;/label&gt;
+    &lt;input type="text" /&gt;
+    &lt;label&gt;Last name&lt;/label&gt;
+    &lt;input type="text" /&gt;
+&lt;/juicy-tile-grid&gt;</code></pre>
+            <h4>JSON:</h4>
+
+            <pre><code>{{stringify(json, udefined, 4)}}</code></pre>
+
         </template>
         <script type="text/javascript">
             model = {
                 editingMode: true,
-                setup: {
+                json: {
                     "gutter": 25,
                     "width": 400,
-                    "name": "root",
-                    "heightAuto": true,
-                    "id": "root",
-                    "itemName": "root",
                     "items": [
                         {
                             "gutter": 10,
@@ -126,12 +127,11 @@
                             "priority": 0.8,
                             "width": "100%",
                             "height": 30,
-                            "hidden": false,
-                            "itemName": "Group 1",
+                            "itemName": "Group: Captions",
                             "widthFlexible": false,
                             "items": [
-                                { "id": 0, "priority": 0.9, "height": 30, "width": 150, "itemName": "First name", "hidden": false },
-                                { "id": 1, "priority": 0.8, "height": 30, "width": 240, "widthFlexible": true, "itemName": "input", "hidden": false }
+                                { "id": 0, "priority": 0.9, "height": 30, "width": 150, "itemName": "First name" },
+                                { "id": 1, "priority": 0.8, "height": 30, "width": 240, "widthFlexible": true, "itemName": "input" }
                             ]
                         },
                         {
@@ -140,12 +140,10 @@
                             "priority": 0.7,
                             "width": "100%",
                             "height": 30,
-                            "hidden": false,
-                            "itemName": "Group 2",
-                            "heightAuto": false,
+                            "itemName": "Group: First name",
                             "items": [
-                                { "id": 2, "priority": 0.7, "height": 30, "width": 150, "itemName": "Last name", "hidden": false },
-                                { "id": 3, "priority": 0.6, "height": 30, "width": 240, "widthFlexible": true, "itemName": "input", "hidden": false }
+                                { "id": 2, "priority": 0.7, "height": 30, "width": 150, "itemName": "First name" },
+                                { "id": 3, "priority": 0.6, "height": 30, "width": 240, "widthFlexible": true, "itemName": "input" }
                             ]
                         },
                         {
@@ -154,12 +152,10 @@
                             "priority": 0.7,
                             "width": "100%",
                             "height": 30,
-                            "hidden": false,
-                            "itemName": "Group 3",
-                            "heightAuto": false,
+                            "itemName": "Group: Last name",
                             "items": [
-                                { "id": 4, "priority": 0.7, "height": 30, "width": 150, "itemName": "Last name", "hidden": false },
-                                { "id": 5, "priority": 0.6, "height": 30, "width": 240, "widthFlexible": true, "itemName": "input", "hidden": false }
+                                { "id": 4, "priority": 0.7, "height": 30, "width": 150, "itemName": "Last name" },
+                                { "id": 5, "priority": 0.6, "height": 30, "width": 240, "widthFlexible": true, "itemName": "input" }
                             ]
                         }
                     ]
@@ -167,6 +163,7 @@
             };
             document.addEventListener("polymer-ready", function () {
                 document.querySelector("template").bindingDelegate = new PolymerExpressions();
+                document.querySelector("template").bindingDelegate.stringify = JSON.stringify;
                 document.querySelector("template").model = model;
             });
         </script>
