Replace width/heightAuto with precalculateWidth/Height
https://github.com/Juicy/juicy-tile-list/issues/30

--- a/examples/juicy-tile-grid/two-tables.html
+++ b/examples/juicy-tile-grid/two-tables.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -227,7 +227,7 @@
                         "height": 100,
                         "itemName": "Group 2",
                         "widthFlexible": true,
-                        "heightAuto": true,
+                        "precalculateHeight": true,
                         "tightGroup": true
                     }, {
                         "gutter": 10,
