--- a/examples/juicy-tiles-grid-editor.html
+++ b/examples/juicy-tiles-grid-editor.html
@@ -247,7 +247,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
         }
       ],
       "name": "root",
-      "heightAuto": true
+      "precalculateHeight": true
     },
     setup2: {
       gutter: 4,
