--- a/examples/juicy-tile-grid/menu-content.html
+++ b/examples/juicy-tile-grid/menu-content.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -172,14 +172,14 @@
                             "priority": 0.3673469387755103,
                             "id": "2",
                             "itemName": "Menu",
-                            "heightAuto": true
+                            "precalculateHeight": true
                         }, {
                             "width": "100%",
                             "height": 25,
                             "priority": 0.3148688046647231,
                             "id": "3",
                             "itemName": "Add row",
-                            "heightAuto": false
+                            "precalculateHeight": false
                         }, {
                             "width": "100%",
                             "height": 25,
@@ -215,7 +215,7 @@
                             "id": "6",
                             "itemName": "Table",
                             "heightDynamic": true,
-                            "heightAuto": true,
+                            "precalculateHeight": true,
                             "widthFlexible": true
                         }],
                         "id": "root_1",
